2005-08-09  Heikki Orsila <heikki.orsila@iki.fi>
	- Changed sprintf() to snprintf() in timetest() to shut up an OpenBSD
	  compiler. The program wasn't faulty, but an OpenLSD compiler is
	  paranoid.

2005-07-21  Heikki Orsila <heikki.orsila@iki.fi>
	* version 0.10
	- Started keeping ChangeLog file, and moved history information from
	  pmr.c to this file.
	- Removed useless documentation from pmr.c.
	- Edited man-page to be more readable.
	- Removed everything about -c switch.
	- Added -m / --md5 switch that computes an md5 checksum of the stream.
	  This is useful for verifying data integrity through TCP networks.
	  Thanks to Ave for the idea.

2005-03-08  Heikki Orsila <heikki.orsila@iki.fi>
	* version 0.09
	- edited man page.

2005-02-19  Heikki Orsila <heikki.orsila@iki.fi>
	- changed web site url to http://www.iki.fi/shd/foss/pmr/, and changed
	  printed speed units to IEC 60027-2 (2000-11) Ed. 2.0. kB => KiB,
	  MB => MiB, GB => GiB, TB => TiB.

2004-07-28  Heikki Orsila <heikki.orsila@iki.fi>
	* version 0.08
	- add -l switch to the command help (i forgot to do in 0.07)

2004-07-01  Heikki Orsila <heikki.orsila@iki.fi>
	* version 0.07
	- add -l switch to limit speed through pipe in bytes per second
        - renamed pipemeter to pmr due to conflict with another project
	- removed -c switch. total bytes is displayed always, and -c is
	  preserved for compatibility.

2004-02-04  Heikki Orsila <heikki.orsila@iki.fi>
	* version 0.06
	- set default buffer size to 8kB

2003-12-28  Heikki Orsila <heikki.orsila@iki.fi>
	* version 0.05
	- add -r switch to disable use of newline (use carriage return instead)
	- add -b switch to control input buffer size

2003-08-30  Heikki Orsila <heikki.orsila@iki.fi>
	* version 0.04
	- fixed speed measurement bug. speeds of over 1 TB/s would have
	  forced the process to exit
        - fixed indentation bug
	- more robustness: gettimeofday() may fail

2003-08-22  Heikki Orsila <heikki.orsila@iki.fi>
	* version 0.03